# NAMT

./: README.md  THEORY.md  calibrate.py  reference_metrics.csv  reference_summary.csv  requirements.txt  run.py  run_all.py
assets/: momentum_prior.npz
assets/seed_42/1mm/: blank_3p.npz  (+1 more)
configs/: paper.json
data/seed_42/: A_blank.npz
data/seed_43/: A_blank.npz
data/seed_44/: A_blank.npz
data/seed_45/: A_blank.npz
data/seed_46/: A_blank.npz
evaluation/: __init__.py  artifact.py  evaluate.py  metrics.py  plot.py
experiments/: dispatch.py  matrix.py  metrics.py  run_cell.py
mdmt/: contrast.py  trackfit.py
mdmt/methods/: __init__.py  baselines.py  eloss.py
namt/: __init__.py  calibration.py  config.py  contrast.py  data.py  field.py  instrument_response.py  inversion.py  momentum.py  physics.py  pipeline.py  scenes.py
namt/methods/: __init__.py  base.py  baselines.py  namt.py
simulation/: CMakeLists.txt  Cry.mac  dataset.py  muPos.cc  run.sh  run_all.sh  scenes.tsv
simulation/config/: bench_bg_air.yaml  bench_bg_concrete.yaml  bench_bg_sand.yaml  newlayout4_cube400.yaml  newrpc.yaml  newrpc_material.yaml  newrpc_readout.yaml
simulation/include/: ActionInitialization.hh  DetectorConstruction.hh  EdepData.hh  EventAction.hh  GeometryConfig.hh  Object.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RNGWrapper.hh  Run.hh  RunAction.hh  RunMessenger.hh  SteppingAction.hh  TrackingAction.hh
simulation/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  GeometryConfig.cc  Object.cc  ObjectLinkDef.h  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc  TrackingAction.cc
(+778 files in other folders)
